--- a/style.css
+++ b/style.css
@@ -4,12 +4,54 @@
     margin: 0;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .nav {
     width: 100%;
     height: 70px;
 
     background-color: #FF6900;
+
+    position: fixed;
+
+    box-shadow: black;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
+.genere {
+    padding-left: 270px;
+}
+
+.btn {
+    font-weight: bold;
+
+    text-decoration: none;
+
+    font-size: 12px;
+
+    color: white;
+}
+
+.logo {
+    width: 135px;
+    height: auto;
+}
+
+.icon {
+    padding-right: 270px;
+}
+
+
+
+
+
+
+
 
 .vestiti {
     width: 100%;
