--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/* SEZIONE NAV-BAR */
+
 .nav {
     width: 100%;
     height: 70px;
@@ -49,18 +52,44 @@ body {
 }
 
 
-
-
-
-
-
+/* SEZIONE CATALOGO VESTITI */
 
 .vestiti {
     width: 100%;
     height: 1570px;
 
     background-color: white;
+
+     /* TEST */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.card {
+    max-width: 450px;
+    max-height: 700px;
+
+    /* TEST */
+    border: 1px solid red;
+}
+
+.model {
+    height: 645px;
+    width: 445px;
+
+}
+
+.prezzo {
+    color: red;
+}
+
+.sconto {
+    color: black;
+}
+
+
+/* SEZIONE FOOTER */
 
 .info {
     width: 100%;
