--- a/style.css
+++ b/style.css
@@ -18,12 +18,16 @@ body {
     background-color: #FF6900;
 
     position: fixed;
+    top: 0;
+    left: 0;
 
-    box-shadow: black;
+    box-shadow: 5px 0 5px black;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    z-index: 10;
 }
 
 .genere {
@@ -38,6 +42,10 @@ body {
     font-size: 12px;
 
     color: white;
+}
+
+.btn:hover {
+    text-decoration: underline;
 }
 
 .logo {
@@ -58,27 +66,103 @@ body {
     width: 100%;
     height: 1570px;
 
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-top: calc(70px + 60px);
+
     background-color: white;
 
-     /* TEST */
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
+
+     /* TEST */
+
+    border: 1px solid red;
 }
 
 .card {
-    max-width: 450px;
-    max-height: 700px;
+    width: calc(100% / 3);
+    height: 700px;
 
     /* TEST */
     border: 1px solid red;
 }
 
-.model {
-    height: 645px;
-    width: 445px;
+.relative {
+    width: 100%;
+    height: 100%;
 
+    position: relative;
 }
+
+.near {
+    position: absolute;
+    bottom: 30px;
+
+    gap: 5px;
+
+    display: flex;
+}
+
+.perc-sconto {
+    width: 55px;
+    height: 30px;
+
+    background-color: red;
+    color: white;
+    
+
+    font-weight: bold;
+
+    padding: 6px 10px;
+}
+
+.green {
+    width: 105px;
+    height: 30px;
+
+    background-color: green;
+    color: white;
+
+    font-weight: bold;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cuore {
+    padding: 20px;
+
+    position: absolute;
+    top: 10px;
+    right: 0;
+    
+    
+    background-color: white;
+}
+
+.model {
+    width: 100%;
+}
+
+.uno:hover {
+    display: none;
+}
+
+.due {
+    display: none;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.due:hover {
+    display: block;
+}
+   
 
 .prezzo {
     color: red;
