--- a/style.css
+++ b/style.css
@@ -192,6 +192,8 @@ body {
 
     display: flex;
     justify-content: space-around;
+
+    padding-top: 30px;
 }
 
 .sinistra {
@@ -199,4 +201,15 @@ body {
     align-items: flex-start;
     flex-direction: column;
     justify-content: center;
+}
+
+.destra {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+}
+
+h5 , h6 {
+    padding-bottom: 10px;
 }
